--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Georgia, 'Times New Roman', Times, serif , Verdana , Helvetica
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 body{
     background:lightblue;
@@ -63,14 +63,16 @@ body{
     margin-top: 20px;
     text-transform: uppercase;
     text-align: center;
-    font-weight: 600;
+    font-weight: 100;
     line-height: 1.4em;
     font-family: Georgia, 'Times New Roman', Times, serif , Verdana , Helvetica
 }
 
-.profileText h2 span{
-    font-size: 0.6em;
-    font-weight: 300;
+h2{
+    font-size: 20px;
+    font-weight: 600;
+    font-synthesis-style: ;
+    padding-top: 50px;
 }
 
 .contactInfo{
@@ -101,7 +103,7 @@ body{
 
 .contactInfo ul li span{
     color: #fff;
-    font-weight: 300; 
+    font-weight: 100; 
 }
 
 .contactInfo ul li{
@@ -167,7 +169,7 @@ body{
     color: #003147;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 p{
@@ -252,10 +254,21 @@ p{
     text-align: center;
 }
 
-h5 h4
+h5 span
 {
-  
+    font-style: italic;
 }
+
+span
+{
+    font-style: italic;
+    font-size: 15px;
+}
+a{
+    color: rgb(6, 136, 235);
+}
+    
+
 @media (max-width: 1000px){
     .container{
         margin: 10px;
