--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ padding-top: 50px;
     list-style: none;
     margin: 10px 0;
     cursor: pointer;
+    
 }
 
 .contactInfo ul li .icon{
@@ -98,6 +99,7 @@ padding-top: 50px;
     width: 30px;
     font-size: 18px;
     color: #03a9f4;
+    padding: 6px;
 }
 
 .contactInfo ul li span{
