--- a/style.css
+++ b/style.css
@@ -279,7 +279,8 @@ text-decoration: underline;
     margin-left: 0.5em; /* Adjust as needed */
   }
 
-@media (max-width: 1000px){
+@media (max-width: 768px)
+{
     .container{
         margin: 10px;
         grid-template-columns: repeat(1, 1fr);
