--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ padding-top: 50px;
 .contactInfo.education h5{
     color: #03a9f4;
     font-weight: 500;
+    
 }
 
 .contactInfo.education h4:nth-child(2){
@@ -158,8 +159,17 @@ padding-top: 50px;
 }
 
 .about{
-    margin-bottom: 50px;
-    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-top: 10px;
+    align-items: left;
+    
+}
+.about p{
+    position: left;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 1px;
+    
 }
 
 .about:last-child{
@@ -170,9 +180,28 @@ padding-top: 50px;
     color: #003147;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin-bottom: 5px;
+    padding-top: 5px;
 }
 
+
+.title3{
+    padding-bottom: 8px;
+    text-align: center;
+    color: #003147;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+em{
+    color: #03a9f4;
+    font-weight: 60;
+}
+ul.space li {
+    margin-bottom: 10px;
+}
+
+.li1{
+    color: #7d0000;
+}
 p{
     color: #333;
 }
@@ -187,11 +216,12 @@ p{
     min-width: 150px;
 }
 
-.about .box .year_company h5{
+.about .box .year_company , h5{
     text-transform: uppercase;
-    color: #848c90;
+    color: #191d4f;
     font-weight: 600;
     padding: 5px;
+    text-align: left;
     
 }
 
@@ -202,47 +232,21 @@ p{
     padding: 5px;
 }
 
-
-.skills .box{
-    position: relative;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 150px 1fr;
-    justify-content: center;
-    align-items: center;
-}
-
-.skills .box h4{
-    text-transform: uppercase;
-    color: #848c90;
-    font-weight: 500;
-}
-
-.skills .box .percent{
-    position: relative;
-    width: 100%;
-    height: 10px;
-    background: #f00;
-}
-
-.skills .box .percent div{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    background: #03a9f4;
-}
-
-.interests ul{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+ul{
+    display: list-item;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-left: 20px;
+    padding-bottom: 10px;
+    list-style-type: circle;
 }
 
 .interests ul li{
     list-style: none;
-    color: #333;
+    color: #ffffff;
     font-weight: 500;
     margin: 10px 0;
+    
 }
 
 .interests ul li .fa{
@@ -258,6 +262,7 @@ p{
 h5 span
 {
     font-style: italic;
+    
 }
 
 span
@@ -268,8 +273,7 @@ span
 a
 {
     color: rgb(6, 136, 235);
-}
-   
+} 
 strong
 {
 text-decoration: underline;
@@ -278,6 +282,9 @@ text-decoration: underline;
 .icon-text {
     margin-left: 0.5em; /* Adjust as needed */
   }
+.text h4 {
+    text-align: center;
+    
 
 @media (max-width: 768px)
 {
@@ -285,4 +292,5 @@ text-decoration: underline;
         margin: 10px;
         grid-template-columns: repeat(1, 1fr);
     }
+}
 }
