--- a/style.css
+++ b/style.css
@@ -286,11 +286,21 @@ text-decoration: underline;
     text-align: center;
     
 
-@media (max-width: 768px)
+@media screen and (max-width: 768px)
 {
     .container{
-        margin: 10px;
+        margin: 1px;
         grid-template-columns: repeat(1, 1fr);
     }
 }
+}
+
+@media screen and (max-width: 767px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+
+    .right {
+        order: 1;
+    }
 }
