--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ text-decoration: underline;
 }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
     .container {
         grid-template-columns:repeat(1, 1fr);
     }
