--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ text-decoration: underline;
     margin-left: 0.5em; /* Adjust as needed */
   }
 .text h4 {
-    text-align: center;
+    text-align: absolute;
     
 
 @media screen and (max-width: 768px)
@@ -295,9 +295,10 @@ text-decoration: underline;
 }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
     .container {
         grid-template-columns:repeat(1, 1fr);
+        margin: 0;
     }
 
     .right {
