--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ h2{
 padding-top: 50px;
 }
 
+
 .contactInfo{
     padding-top: 40px;
 }
@@ -180,8 +181,9 @@ padding-top: 50px;
     color: #003147;
     text-transform: uppercase;
     letter-spacing: 1px;
-    padding-top: 5px;
+    padding: 10px;
 }
+
 
 
 .title3{
